--- a/next-dashboard-ui/package.json
+++ b/next-dashboard-ui/package.json
@@ -13,6 +13,7 @@
     "@types/react-big-calendar": "^1.16.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
+    "prisma": "^6.1.0",
     "react": "^18",
     "react-big-calendar": "^1.17.0",
     "react-calendar": "^5.1.0",
