--- a/next-dashboard-ui/package.json
+++ b/next-dashboard-ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^6.1.0",
     "@types/react-big-calendar": "^1.16.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
@@ -20,6 +21,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
+    "ts-node": "^10.9.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -31,5 +33,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.2"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
